@@ -108,7 +108,7 @@ class GroupInstanceFilter
 				IBaseExpression expr = ( (IFilterDefinition) groupFilters.get( j ) ).getExpression( ); 
 				expr.setGroupName( name );
 				expressionList.add( expr );
-				groupLevels.add( new Integer( i + 1 ) );
+				groupLevels.add( Integer.valueOf( i + 1 ) );
 			}
 		}
 	}
